# -mediapipe-autoflip-reframe

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  run_day3.py  setup.py  setup_autoflip.py  test_day2.py  test_day2_compl.py  test_day3_complete.py
benchmarks/: performance.py
configs/: portrait_916.pbtxt
demo/: create_demo.py
docker/: DOCKERFILE
docs/: api_refrences.md
src/: cli.py  io_utils.py  pipeline.py  production_cli.py  production_pipeline.py
src/autoflip/: hints.py  runner.py
src/detectors/: face_mp.py  shot_detector.py  slides.py  zone_detector.py
src/edge_cases/: handler.py
src/encoding/: video_encoder.py
src/layout/: __init__.py  composer.py
src/optimization/: performance.py
src/trackers/: temporal.py
