[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webinar-reframer"
version = "1.0.0"
description = "Automatically reframe horizontal webinar videos to vertical 9:16 format"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yash", email = "pansareyash9740@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "protobuf>=3.20.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
enhanced = [
    "opencv-contrib-python>=4.8.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
]
gpu = [
    "onnxruntime-gpu>=1.15.0",
]

[project.scripts]
webinar-reframer = "src.cli:main"

